# cmake_learning

./: README.md
python_plus_c++/: CMakeLists.txt
python_plus_c++/src/: CMakeLists.txt  add_my.cpp  add_my.h
t1/: CMakeLists.txt
t2/: CMakeLists.txt
t2/src/: CMakeLists.txt  main.cpp
t3/: CMakeLists.txt
t3/lib/: CMakeLists.txt  hello.cpp
t4/: CMakeLists.txt
t4-2/: CMakeLists.txt
t4-2/src/: CMakeLists.txt  main.cpp
t4-3/src/: CMakeLists.txt
t4/src/: CMakeLists.txt  main.cpp
t5/: CMakeLists.txt
t5/src/: CMakeLists.txt  main.c
test_cmake_debug/: CMakeLists.txt  main.cpp
test_cmake_debug/include/: swap.h
test_cmake_debug/src/: swap.cpp
