find_path(head_path hello.h)
message(STATUS "!!!")
if(head_path)
	include_directories(${head_path})
	message(STATUS "find head path " ${head_path})
endif(head_path)
find_library(lib_path hello)
if(lib_path)
	#link_directories(${lib_path})
	message(STATUS "find lib path " ${lib_path})
endif(lib_path)
add_executable(main main.cpp)
target_link_libraries(main ${lib_path})
